# dfimagetools

./: .gitignore  .pylintrc  ACKNOWLEDGEMENTS  AUTHORS  MANIFEST.in  MANIFEST.test_data.in  README  README.md  dependencies.ini  dfimagetools.ini  imagetools.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  test_docker.yml  test_docs.yml  test_tox.yml  test_windows.yml
config/appveyor/: install.ps1
config/dpkg/: changelog  clean  control  copyright  python3-dfimagetools.install  python3-imagetools.install
config/pylint/: spelling-private-dict
dfimagetools/: __init__.py  artifact_filters.py  bodyfile.py  data_stream_writer.py  definitions.py  docker.py  entry_points.py  environment_variables.py  extract_data_streams.py  file_entry_lister.py  helpers.py  list_file_entries.py  map_extents.py  path_filters.py  path_resolver.py  recursive_hasher.py  resources.py  source_analyzer.py  windows_registry.py  windows_registry_collector.py
dfimagetools/helpers/: __init__.py  backend.py  command_line.py
dfimagetools/scripts/: __init__.py  extract_data_streams.py  list_file_entries.py  map_extents.py  recursive_hasher.py  source_analyzer.py
docs/: conf.py  index.rst
docs/sources/: Bodyfile-format.md
docs/sources/api/: dfimagetools.helpers.rst  dfimagetools.rst  dfimagetools.scripts.rst  imagetools.rst  modules.rst
docs/sources/user/: Installation-instructions.md  index.rst
imagetools/: __init__.py  file_entry_lister.py  helpers.py
test_data/: ntfs.vhd.bodyfile
test_data/artifacts/: artifacts.yaml
tests/: artifact_filters.py  bodyfile.py  data_stream_writer.py  environment_variables.py  file_entry_lister.py  list_file_entries.py  path_filters.py  path_resover.py  source_analyzer.py  test_lib.py
tools/: __init__.py  extract_data_streams.py  helpers.py  list_container_entries.py  list_file_entries.py  map_extents.py  recursive_hasher.py  source_analyzer.py
utils/: update_release.sh
