[metadata]
name = dfimagetools
version = 20240128
description = Storage media image tools
long_description = Collection of tools to process storage media images.
long_description_content_type = text/plain
url = https://github.com/log2timeline/dfimagetools
maintainer = Log2Timeline maintainers
maintainer_email = log2timeline-maintainers@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  dfimagetools = dfimagetools
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[options.entry_points]
console_scripts =
  extract_data_streams = dfimagetools.extract_data_streams
  list_file_entries = dfimagetools.list_file_entries
  map_extents = dfimagetools.map_extents
  recursive_hasher = dfimagetools.recursive_hasher
  source_analyzer = dfimagetools.source_analyzer

[sdist]
template = MANIFEST.in
manifest = MANIFEST

[sdist_test_data]
template = MANIFEST.test_data.in
manifest = MANIFEST.test_data

[bdist_rpm]
release = 1
packager = Log2Timeline maintainers <log2timeline-maintainers@googlegroups.com>
doc_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
build_requires = python3-setuptools
requires =
  libbde-python3 >= 20220121
  libcaes-python3 >= 20240114
  libcreg-python3 >= 20200725
  libewf-python3 >= 20131210
  libfcrypto-python3 >= 20240114
  libfsapfs-python3 >= 20220709
  libfsext-python3 >= 20220829
  libfsfat-python3 >= 20220925
  libfshfs-python3 >= 20220831
  libfsntfs-python3 >= 20211229
  libfsxfs-python3 >= 20220829
  libfvde-python3 >= 20220121
  libfwnt-python3 >= 20210717
  libluksde-python3 >= 20220121
  libmodi-python3 >= 20210405
  libphdi-python3 >= 20220228
  libqcow-python3 >= 20201213
  libregf-python3 >= 20201002
  libsigscan-python3 >= 20230109
  libsmdev-python3 >= 20140529
  libsmraw-python3 >= 20140612
  libvhdi-python3 >= 20201014
  libvmdk-python3 >= 20140421
  libvsapm-python3 >= 20230506
  libvsgpt-python3 >= 20211115
  libvshadow-python3 >= 20160109
  libvslvm-python3 >= 20160109
  python3-artifacts >= 20220219
  python3-cffi >= 1.9.1
  python3-dfdatetime >= 20221112
  python3-dfvfs >= 20240115
  python3-dfwinreg >= 20211207
  python3-dtfabric >= 20230518
  python3-idna >= 2.5
  python3-pytsk3 >= 20210419
  python3-pyyaml >= 3.10
  python3-xattr >= 0.7.2

[bdist_wheel]
universal = 1
