[metadata]
name = dfimagetools
version = 20241012
description = Storage media image tools
long_description = Collection of tools to process storage media images.
long_description_content_type = text/plain
url = https://github.com/log2timeline/dfimagetools
maintainer = Log2Timeline maintainers
maintainer_email = log2timeline-maintainers@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  dfimagetools = dfimagetools
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[options.entry_points]
console_scripts =
  extract_data_streams = dfimagetools.scripts.extract_data_streams:Main
  list_file_entries = dfimagetools.scripts.list_file_entries:Main
  map_extents = dfimagetools.scripts.map_extents:Main
  recursive_hasher = dfimagetools.scripts.recursive_hasher:Main
  source_analyzer = dfimagetools.scripts.source_analyzer:Main

[bdist_wheel]
universal = 1
